Thu Mar 30 1:02:37 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - man/powermust.8: added battery test command to the man page.

Wed Mar 29 3:11:15 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - powermust.c: changed "output.frequency" to "input.frequency"

Wed Mar 22 20:58:22 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: remove the wrong ups.status setting to OB upon
   communication failure.

   [Alioth Bug #303257]

Sat Mar 18 10:40:57 EST 2006/ Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: fixed float/double mismatch in battery voltage
   (backported from trunk)

Fri Mar 10 14:10:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - docs/FAQ: removed entry that is no longer applicable, since
   starting from version 1.4.0, upsd will no longer be able to
   startup in this particular case (it changes UID before reading the
   configuration files)
 - drivers/genericups.c: fixes Alioth bug #302338 (genericups: custom
   configuration through ups.conf not working)
 - man/genericups.8: remove the "connection monitoring" chapter from
   the man page (the code to perform this never made it into the driver)

Fri Mar 10 08:56:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - client/upsrw.c: swapped parameters in memset() call
 - drivers/tripplite_usb.c: off-by-one buffer overflow

Sun Feb 12 11:54:57 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: rewrote logical-to-physical value conversion. Rewrote
   extraction of logical values from report. Added Kelvin-to-Celsius
   conversion. Tweaked APC date conversion. Back-UPS BF500 support.  
   Deleted unused items in HIDItem structure.

2.0.3

Tue Feb 07 10:47:01 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - update configure.in, install.sh, include/version* and NEWS
 - several minor fixes

Tue Jan 24 20:40:34 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - safenet: improve robustness, add minimal hardware detection and