@@ -1,7 +1,14 @@
+Wed Apr 05 07:58:47 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
+
+ - newhidups: fix the "double free or corruption" crash upon device
+   reconnexion (Debian bug #354305)
+
 Thu Mar 30 1:02:37 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
  - man/powermust.8: added battery test command to the man page.
 
 Wed Mar 29 3:11:15 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
  - powermust.c: changed "output.frequency" to "input.frequency"
 
 Wed Mar 22 20:58:22 2006 / Arnaud Quette <aquette.dev@gmail.com>
